# kde-workspace

./: CMakeLists.txt  KDE4WorkspaceConfig.cmake.in  config-workspace.h.cmake  startkde.cmake
appmenu/: menuimporter.cpp
cmake/modules/: FindQalculate.cmake
kcheckpass/: checkpass_pam.c
kcontrol/access/: kaccess.cpp
kcontrol/bell/: CMakeLists.txt
kcontrol/colors/: CMakeLists.txt  colorscm.cpp  colorscm.h  colorsettings.ui
kcontrol/dateandtime/: dtime.cpp
kcontrol/desktoptheme/: CMakeLists.txt  DesktopTheme.ui  kcmdesktoptheme.cpp  kcmdesktoptheme.h  thememodel.cpp
kcontrol/fonts/: CMakeLists.txt
kcontrol/input/: CMakeLists.txt
kcontrol/keyboard/: CMakeLists.txt  kcm_keyboard_widget.cpp  kcm_view_models.cpp  keyboard_applet.cpp  x11_helper.h  xkb_rules.cpp
kcontrol/keys/: kglobalshortcutseditor.cpp
kcontrol/kfontinst/: CMakeLists.txt
kcontrol/krdb/: krdb.cpp
kcontrol/launch/: CMakeLists.txt
kcontrol/randr/: krandrtray.cpp  ktimerdialog.cpp  legacyrandrscreen.cpp  randrcrtc.cpp  randroutput.cpp
kcontrol/screensaver/: scrnsave.cpp
kcontrol/smartcard/: smartcard.h
kdm/: config.def
kdm/kfrontend/sessions/: CMakeLists.txt
khotkeys/test/: CMakeLists.txt
klipper/: clipcommandprocess.cpp  historyurlitem.cpp  klipper.cpp  klipperpopup.cpp
kmenuedit/: CMakeLists.txt  menufile.cpp  treeview.cpp
krunner/: krunnerdialog.cpp
ksmserver/: CMakeLists.txt  client.cpp  fadeeffect.cpp  legacy.cpp  shutdowndlg.cpp
ksmserver/screenlocker/data/: CMakeLists.txt
ksplash/ksplashqml/: CMakeLists.txt
ksplash/ksplashqml/themes/: CMakeLists.txt
ksplash/ksplashqml/themes/CodeKde/: CMakeLists.txt  main.qml
ksplash/ksplashqml/themes/Minimalistic/: main.qml
ksplash/ksplashx/: CMakeLists.txt  defs.h  main.cpp  pixmap.cpp  qcolor_p.cpp  qcolor_x11.cpp  qimage.cpp  qrect.cpp  qsize.h  splash.cpp  x11_defs.cpp
ksplash/ksplashx/scale/: CMakeLists.txt
ksplash/ksplashx/themes/: CMakeLists.txt  create_anim.pl
ksplash/ksplashx/themes/Kore Air/: .directory  CMakeLists.txt  Theme.rc
ksplash/ksplashx/utils/: CMakeLists.txt
ktouchpadenabler/: ktouchpadenabler_daemon.cpp
kwin/: CMakeLists.txt  activation.cpp  client.cpp  client.h  composite.cpp  dbusinterface.cpp  effects.cpp  egl_wayland_backend.cpp  events.cpp  geometry.cpp  geometrytip.cpp  glxbackend.cpp  lanczosfilter.cpp  main.cpp  manage.cpp  options.cpp  paintredirector.cpp  placement.cpp  rules.cpp  rules.h  scene.cpp  scene_opengl.cpp  screenedge.cpp  tabgroup.cpp  thumbnailitem.cpp  toplevel.cpp  useractions.cpp  utils.h  virtualdesktops.cpp  workspace.cpp  workspace.h
kwin/clients/aurorae/themes/plastik/code/: CMakeLists.txt  plastikbutton.cpp
kwin/tabbox/tests/: CMakeLists.txt
libs/kephal/tests/: CMakeLists.txt
plasma/desktop/applets/: CMakeLists.txt
plasma/desktop/applets/kickoff/core/: krunnermodel.cpp  recentapplications.cpp  recentlyusedmodel.cpp  systemmodel.cpp
plasma/desktop/applets/kickoff/simpleapplet/: simpleapplet.cpp
plasma/desktop/applets/kickoff/ui/: itemdelegate.cpp  launcher.cpp  tabbar.cpp  urlitemview.cpp
plasma/desktop/applets/pager/: CMakeLists.txt  pager.cpp
plasma/desktop/applets/tasks/: CMakeLists.txt
plasma/desktop/applets/tasks/support/: textlabel.cpp
plasma/desktop/applets/trash/: trash.cpp
plasma/generic/: CMakeLists.txt
plasma/generic/animators/default/: defaultAnimator.h
plasma/generic/applets/: CMakeLists.txt
plasma/generic/applets/analog-clock/: clock.cpp
plasma/generic/applets/batterymonitor/: metadata.desktop
plasma/generic/applets/calendar/: calendar.cpp
plasma/generic/applets/devicenotifier/package/contents/ui/: ActionItem.qml  DeviceItem.qml  StatusBar.qml
plasma/generic/applets/digital-clock/: clock.cpp
plasma/generic/applets/icon/: icon.cpp
plasma/generic/applets/quicklaunch/: icongridlayout.cpp  quicklaunch.cpp
plasma/generic/applets/system-monitor/: applet.cpp  net.cpp
plasma/generic/applets/systemtray/protocols/dbussystemtray/: dbussystemtraytask.cpp
plasma/generic/applets/systemtray/protocols/fdo/: fdoselectionmanager.cpp  x11embedcontainer.cpp
plasma/generic/applets/systemtray/protocols/plasmoid/: plasmoidtask.cpp
plasma/generic/applets/webbrowser/: CMakeLists.txt
plasma/generic/containmentactions/: CMakeLists.txt
plasma/generic/containmentactions/contextmenu/: CMakeLists.txt  menu.cpp
plasma/generic/dataengines/: CMakeLists.txt
plasma/generic/dataengines/akonadi/: CMakeLists.txt
plasma/generic/dataengines/dict/: CMakeLists.txt
plasma/generic/dataengines/geolocation/: CMakeLists.txt
plasma/generic/dataengines/notifications/: notificationsengine.cpp
plasma/generic/dataengines/nowplaying/: CMakeLists.txt  TODO  nowplayingengine.cpp
plasma/generic/dataengines/nowplaying/playerinterface/: playerfactory.cpp  playerfactory.h
plasma/generic/dataengines/nowplaying/playerinterface/mpris2/: mpris2_p.h
plasma/generic/dataengines/soliddevice/: CMakeLists.txt
plasma/generic/dataengines/systemmonitor/: CMakeLists.txt
plasma/generic/dataengines/time/: timeengine.cpp
plasma/generic/dataengines/weather/ions/: CMakeLists.txt
plasma/generic/dataengines/weather/ions/bbcukmet/: ion_bbcukmet.cpp
plasma/generic/dataengines/weather/ions/debianweather/: CMakeLists.txt  iondebianweather.cpp
plasma/generic/runners/: CMakeLists.txt
plasma/generic/runners/bookmarks/: faviconfromblob.cpp
plasma/generic/runners/bookmarks/tests/: CMakeLists.txt
plasma/generic/runners/calculator/: CMakeLists.txt  calculatorrunner.cpp
plasma/generic/runners/kill/: CMakeLists.txt
plasma/generic/runners/powerdevil/: PowerDevilRunner.cpp
plasma/generic/scriptengines/: CMakeLists.txt
plasma/generic/scriptengines/python/: plasma_importer.py
plasma/generic/scriptengines/webkit/: CMakeLists.txt
plasma/generic/shells/plasma-windowed/: plasmaapp.cpp
plasma/generic/wallpapers/color/: backgrounddelegate.cpp  color.cpp
plasma/generic/wallpapers/image/: CMakeLists.txt  image.cpp  image.h  imageconfig.ui  removebutton.cpp
qguiplatformplugin_kde/: CMakeLists.txt
solid-actions-kcm/: ActionModel.cpp
(+331 files in other folders)
