install(FILES Preview.png Theme.rc DESTINATION ${DATA_INSTALL_DIR}/ksplash/Themes/Kore Air)

install(FILES 600x400/background.png DESTINATION ${DATA_INSTALL_DIR}/ksplash/Themes/Kore Air/600x400)
install(FILES 800x600/background.png DESTINATION ${DATA_INSTALL_DIR}/ksplash/Themes/Kore Air/800x600)
install(FILES 1024x768/background.png DESTINATION ${DATA_INSTALL_DIR}/ksplash/Themes/Kore Air/1024x768)
install(FILES 1280x1024/background.png DESTINATION ${DATA_INSTALL_DIR}/ksplash/Themes/Kore Air/1280x1024)
install(FILES 1600x1200/background.png DESTINATION ${DATA_INSTALL_DIR}/ksplash/Themes/Kore Air/1600x1200)
install(FILES 1920x1200/background.png DESTINATION ${DATA_INSTALL_DIR}/ksplash/Themes/Kore Air/1920x1200)
install(FILES 2550x1600/background.png DESTINATION ${DATA_INSTALL_DIR}/ksplash/Themes/Kore Air/2550x1600)
install(FILES 2550x1600/description.txt DESTINATION ${DATA_INSTALL_DIR}/ksplash/Themes/Kore Air/2550x1600)
install(FILES 2550x1600/icon1.png DESTINATION ${DATA_INSTALL_DIR}/ksplash/Themes/Kore Air/2550x1600)
install(FILES 2550x1600/icon1_anim.png DESTINATION ${DATA_INSTALL_DIR}/ksplash/Themes/Kore Air/2550x1600)
install(FILES 2550x1600/icon2_anim.png DESTINATION ${DATA_INSTALL_DIR}/ksplash/Themes/Kore Air/2550x1600)
install(FILES 2550x1600/icon3.png DESTINATION ${DATA_INSTALL_DIR}/ksplash/Themes/Kore Air/2550x1600)
install(FILES 2550x1600/icon3_anim.png DESTINATION ${DATA_INSTALL_DIR}/ksplash/Themes/Kore Air/2550x1600)
install(FILES 2550x1600/icon4.png DESTINATION ${DATA_INSTALL_DIR}/ksplash/Themes/Kore Air/2550x1600)
install(FILES 2550x1600/icon4_anim.png DESTINATION ${DATA_INSTALL_DIR}/ksplash/Themes/Kore Air/2550x1600)
install(FILES 2550x1600/icon5.png DESTINATION ${DATA_INSTALL_DIR}/ksplash/Themes/Kore Air/2550x1600)
install(FILES 2550x1600/icon5_anim.png DESTINATION ${DATA_INSTALL_DIR}/ksplash/Themes/Kore Air/2550x1600)
install(FILES 2550x1600/rectangle.png DESTINATION ${DATA_INSTALL_DIR}/ksplash/Themes/Kore Air/2550x1600)
